deploy/rbac.yml
apiVersion: v1
kind: Namespace
metadata:
  name: telegraf-injector
