deploy/apps.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: test
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
      annotations:
        telegraf.influxdata.com/ports: "9090"
    spec:
      containers:
      - name: nginx
        image: nginx:alpine
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: nginx-deamon
  namespace: test
spec:
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
      annotations:
        telegraf.influxdata.com/ports: "8080,9090"
        telegraf.influxdata.com/path: /v1/metrics
        telegraf.influxdata.com/interval: 5s
        telegraf.influxdata.com/scheme: http
        telegraf.influxdata.com/internal: "true"
    spec:
      containers:
      - name: nginx
        image: nginx:alpine
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis
  namespace: test
spec:
  selector:
    matchLabels:
      app: redis
  serviceName: redis
  template:
    metadata:
      labels:
        app: redis
      annotations:
        telegraf.influxdata.com/inputs: |+
          [[inputs.redis]]
            servers = ["tcp://localhost:6379"]
        telegraf.influxdata.com/class: app
    spec:
      containers:
      - name: redis
        image: redis:alpine
