deploy/pods.yml
apiVersion: v1
kind: Namespace
metadata:
  name: test
  labels:
    controller: telegraf-injector
---
apiVersion: v1
kind: Pod
metadata:
  name: noop
  namespace: test
  annotations:
    cost: 2324
spec:
  containers:
  - name: nginx
    image: nginx:alpine
---
apiVersion: v1
kind: Pod
metadata:
  name: super
  namespace: test
  annotations:
    telegraf.influxdata.com/ports: "8080"
    telegraf.influxdata.com/path: /v1/metrics
    telegraf.influxdata.com/interval: 5s
    telegraf.influxdata.com/scheme: http
    telegraf.influxdata.com/internal: "true"
spec:
  containers:
  - name: nginx
    image: nginx:alpine
