deploy/deploy.yml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  name: telegraf-injector
  namespace: telegraf-injector
  labels:
    app: telegraf-injector
webhooks:
  - name: telegraf.influxdata.com
    namespaceSelector:
      matchLabels:
        controller: telegraf-injector
    clientConfig:
      service:
        name: telegraf-injector
        namespace: telegraf-injector
        path: "/mutate-v1-pod"
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUZ1akNDQTZJQ0NRRFZMVDVWaTJna0JqQU5CZ2txaGtpRzl3MEJBUXNGQURDQm5qRUxNQWtHQTFVRUJoTUMKVGt3eEZUQVRCZ05WQkFnTURGcDFhV1FnU0c5c2JHRnVaREVTTUJBR0ExVUVCd3dKVW05MGRHVnlaR0Z0TVJvdwpHQVlEVlFRS0RCRlRjR0Z5YTJ4cGJtY2dUbVYwZDI5eWF6RVdNQlFHQTFVRUN3d05TVlFnUkdWd1lYSjBiV1Z1CmRERXdNQzRHQTFVRUF3d25kR1ZzWldkeVlXWXRhVzVxWldOMGIzSXVkR1ZzWldkeVlXWXRhVzVxWldOMGIzSXUKYzNaak1CNFhEVEU1TVRFeU9ERTBNemN3TVZvWERUSXlNRGt4TnpFME16Y3dNVm93Z1o0eEN6QUpCZ05WQkFZVApBazVNTVJVd0V3 [...]
    rules:
      - operations: [ "CREATE", "UPDATE", "DELETE"]
        apiGroups: ["*"]
        apiVersions: ["*"]
        resources: ["pods"]
    failurePolicy: Fail
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: telegraf-injector
  namespace: telegraf-injector
  labels:
    app: telegraf-injector
spec:
  replicas: 1
  selector:
    matchLabels:
      app: telegraf-injector
  template:
    metadata:
      labels:
        app: telegraf-injector
    spec:
      serviceAccountName: telegraf-injector
      containers:
        - name: controller
          image: docker.io/gitirabassi/telegraf-injector:v0.0.16
          args:
            - --telegraf-default-class=basic
            - --telegraf-classes-secret=telegraf-injector-classes
          ports:
            - name: https
              containerPort: 9443
              protocol: TCP
          volumeMounts:
          - name: certs
            readOnly: true
            mountPath: "/etc/certs"
      volumes:
      - name: certs
        secret:
          secretName: telegraf-injector-certs
---
apiVersion: v1
kind: Service
metadata:
  name: telegraf-injector
  namespace: telegraf-injector
  labels:
    app: telegraf-injector
spec:
  ports:
    - port: 443
      targetPort: 9443
      protocol: TCP
      name: https
  selector:
    app: telegraf-injector
